// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@modernpoacher/cogs/cogs/text/field <Field /> With additional props renders 1`] = `
<input
  className="MOCK CLASSNAME"
  disabled={true}
  id="MOCK ID"
  name="MOCK NAME"
  readOnly={true}
  required={true}
  type="text"
/>
`;

exports[`@modernpoacher/cogs/cogs/text/field <Field /> With required props renders 1`] = `
<input
  className="MOCK CLASSNAME"
  disabled={false}
  name="MOCK NAME"
  readOnly={false}
  required={false}
  type="text"
/>
`;
